Added ini config parser without required/optional checking

--- a/ConfigurationParser/configuration.ini
+++ b/ConfigurationParser/configuration.ini
@@ -1,8 +1,9 @@
-[Settings]
+[SETTINGS]
 StatusPort=6090
 Archive=1
 LogFile=/opt/ecs/mvuser/MV_IPTel/log/MV_IPTel.log
 Version=0.9 Build 4 Created July 11 2004 14:00
+camel_case_param=some text to parse
 
 [FTP]
 FTPPort=21
