Added better list parsing

--- a/ConfigurationParser/tests/test_config.ini
+++ b/ConfigurationParser/tests/test_config.ini
@@ -6,4 +6,6 @@ ExampleList=["123", "332"]
 ExampleList2=test,test2
 ExampleList3=[6, 4]
 ExampleList4=test1;test2
+IntList=4;7
+BoolList=1,false,0
 camel_case_value=Some value
