Fixed parsing string to bool

--- a/ConfigurationParser/tests/test_config.ini
+++ b/ConfigurationParser/tests/test_config.ini
@@ -8,4 +8,5 @@ ExampleList3=[6, 4]
 ExampleList4=test1;test2
 IntList=4;7
 BoolList=1,false,0
+BoolListWithBadValue=something
 camel_case_value=Some value
