Argsparser, logging, configuration and script boilerplate

--- a/configuration.ini
+++ b/configuration.ini
@@ -1,7 +1,6 @@
 [SETTINGS]
 StatusPort=6090
 Archive=1
-LogFile=/opt/ecs/mvuser/MV_IPTel/log/MV_IPTel.log
 Version=0.9 Build 4 Created July 11 2004 14:00
 camel_case_param=some text to parse
 
@@ -15,6 +14,4 @@ SUPassword=Avaya
 RunFTPS=0
 FTPPort=990
 TFTPDir=/opt/ecs/mvuser/MV_IPTel/data/TFTPdata
-ExampleList=["123", "332"]
-ExampleList2=test,test2
-ExampleList3=[test,test2]
+ValuesList=123;494
