--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,15 @@
 atomicwrites==1.4.0
 attrs==21.4.0
 colorama==0.4.4
+cx-Freeze==6.10
+cx-Logging==3.0
+importlib-metadata==4.11.1
 iniconfig==1.1.1
+lief==0.11.5
 packaging==21.3
 pluggy==1.0.0
 py==1.11.0
 pyparsing==3.0.7
 pytest==7.0.0
 tomli==2.0.0
+zipp==3.7.0
