--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,22 @@
 atomicwrites==1.4.0
 attrs==21.4.0
+certifi==2021.10.8
+charset-normalizer==2.0.12
 colorama==0.4.4
 cx-Freeze==6.10
 cx-Logging==3.0
+idna==3.3
 importlib-metadata==4.11.1
 iniconfig==1.1.1
 lief==0.11.5
+marshmallow==3.15.0
 packaging==21.3
 pluggy==1.0.0
 py==1.11.0
+pyoxidizer==0.18.0
 pyparsing==3.0.7
 pytest==7.0.0
+requests==2.27.1
 tomli==2.0.0
+urllib3==1.26.8
 zipp==3.7.0
